# Smriti

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml  rust.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  main_test.rs  shell_executor.rs
crates/database/: Cargo.toml
crates/database/src/: db.rs  lib.rs  models.rs  queries.rs
