[package]
name = "cli"
version = "1.0.0"
edition = "2021"

repository = "https://github.com/aspasht/smriti"

[lib]
name = "cli"
path = "src/args.rs"

[[bin]]
name = "smriti"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
database = { path = "../database" }
rusqlite = { workspace = true }
subprocess = { workspace = true }
cli-table = "0.4.9"
anstyle = "1.0.10"
colored = "2.1.0"
regex = "1.11.1"
